# skissm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build-xcframework.sh  build_xcframework.sh  conanfile.txt  gen_docs.sh  version.properties
lib/PQClean/: CMakeLists.txt
lib/curve25519/: CMakeLists.txt  curve25519-donna.h
lib/kyber/: CMakeLists.txt
lib/mbedcrypto/: CMakeLists.txt
lib/mbedcrypto/include/: CMakeLists.txt  aes.h  aesni.h  base64.h  cipher.h  cipher_internal.h  config.h  error.h  gcm.h  hkdf.h  md.h  md_internal.h  platform.h  platform_util.h  sha256.h  sha512.h
lib/protobuf/: CMakeLists.txt  add_group_members_request_payload.proto  add_group_members_response_payload.proto  chain_key.proto  create_group_request_payload.proto  create_group_response_payload.proto  delete_user_request_payload.proto  delete_user_response_payload.proto  e2ee_account.proto  e2ee_address.proto  e2ee_commands.proto  e2ee_group_msg_payload.proto  e2ee_group_msg_response_payload.proto  e2ee_group_pre_key_payload.proto  e2ee_group_session.proto  e2ee_message.proto  e2ee_message_type.proto  e2ee_msg_payload.proto  e2ee_msg_response_payload.proto  e2ee_plaintext.proto  e2ee_plaintext_type.proto  e2ee_pre_key_bundle.proto  e2ee_pre_key_payload.proto  e2ee_protocol_msg.proto  e2ee_ratchet.proto  e2ee_session.proto  gen_codes.sh  get_group_request_payload.proto  get_group_response_payload.proto  get_pre_key_bundle_request_payload.proto  get_pre_key_bundle_response_payload.proto  key_pair.proto  message_key.proto  one_time_pre_key_pair.proto  one_time_pre_key_public.proto  pre_key_bundle.proto  publish_spk_request_payload.proto  publish_spk_response_payload.proto  ratchet.proto  receiver_chain_node.proto  (+10 more)
lib/protobuf/exports/c/: add_group_members_request_payload.pb-c.c  add_group_members_request_payload.pb-c.h  add_group_members_response_payload.pb-c.c  add_group_members_response_payload.pb-c.h  chain_key.pb-c.c  chain_key.pb-c.h  create_group_request_payload.pb-c.c  create_group_request_payload.pb-c.h  create_group_response_payload.pb-c.c  create_group_response_payload.pb-c.h  delete_user_request_payload.pb-c.c  delete_user_request_payload.pb-c.h  delete_user_response_payload.pb-c.c  delete_user_response_payload.pb-c.h  e2ee_account.pb-c.c  e2ee_account.pb-c.h  e2ee_address.pb-c.c  e2ee_address.pb-c.h  e2ee_commands.pb-c.c  e2ee_commands.pb-c.h  e2ee_group_msg_payload.pb-c.c  e2ee_group_msg_payload.pb-c.h  e2ee_group_msg_response_payload.pb-c.c  e2ee_group_msg_response_payload.pb-c.h  e2ee_group_pre_key_payload.pb-c.c  e2ee_group_pre_key_payload.pb-c.h  e2ee_group_session.pb-c.c  e2ee_group_session.pb-c.h  e2ee_message.pb-c.c  e2ee_message.pb-c.h  e2ee_message_type.pb-c.c  e2ee_message_type.pb-c.h  e2ee_msg_payload.pb-c.c  e2ee_msg_payload.pb-c.h  e2ee_msg_response_payload.pb-c.c  e2ee_msg_response_payload.pb-c.h  e2ee_plaintext.pb-c.c  e2ee_plaintext.pb-c.h  e2ee_plaintext_type.pb-c.c  e2ee_plaintext_type.pb-c.h  (+56 more)
lib/protobuf/exports/c/skissm/: add_group_members_request_payload.pb-c.c  add_group_members_request_payload.pb-c.h  chain_key.pb-c.c  chain_key.pb-c.h  create_group_request_payload.pb-c.c  create_group_request_payload.pb-c.h  create_group_response_payload.pb-c.c  create_group_response_payload.pb-c.h  delete_user_request_payload.pb-c.c  delete_user_request_payload.pb-c.h  e2ee_account.pb-c.c  e2ee_account.pb-c.h  e2ee_address.pb-c.c  e2ee_address.pb-c.h  e2ee_commands.pb-c.c  e2ee_commands.pb-c.h  e2ee_group_msg_payload.pb-c.c  e2ee_group_msg_payload.pb-c.h  e2ee_group_pre_key_payload.pb-c.c  e2ee_group_pre_key_payload.pb-c.h  e2ee_group_session.pb-c.c  e2ee_group_session.pb-c.h  e2ee_message.pb-c.c  e2ee_message.pb-c.h  e2ee_message_type.pb-c.c  e2ee_message_type.pb-c.h  e2ee_msg_payload.pb-c.c  e2ee_msg_payload.pb-c.h  e2ee_plaintext.pb-c.c  e2ee_plaintext.pb-c.h  e2ee_plaintext_type.pb-c.c  e2ee_plaintext_type.pb-c.h  e2ee_pre_key_bundle.pb-c.c  e2ee_pre_key_bundle.pb-c.h  e2ee_pre_key_payload.pb-c.c  e2ee_pre_key_payload.pb-c.h  e2ee_protocol_msg.pb-c.c  e2ee_protocol_msg.pb-c.h  e2ee_ratchet.pb-c.c  e2ee_ratchet.pb-c.h  (+40 more)
lib/protobuf/exports/cpp/skissm/: add_group_members_request_payload.pb.cc  add_group_members_request_payload.pb.h  chain_key.pb.cc  chain_key.pb.h  create_group_request_payload.pb.cc  create_group_request_payload.pb.h  create_group_response_payload.pb.cc  (+73 more)
lib/protobuf/skissm/: create_group_request_payload.proto  e2ee_address.proto  e2ee_commands.proto  e2ee_message.proto  e2ee_plaintext_type.proto  e2ee_session.proto  get_pre_key_bundle_response_payload.proto  message_key.proto  one_time_pre_key_public.proto  publish_spk_request_payload.proto  register_user_request_payload.proto  register_user_response_payload.proto  remove_group_members_request_payload.proto  sender_chain_node.proto  signed_pre_key_public.proto  supply_opks_request_payload.proto
lib/protobuf/skissm/service/: e2ee_service.proto
lib/sphincsplus/: CMakeLists.txt
tests/: CMakeLists.txt  client.hpp  db.c  db.h  description.md  e2ee_protocol_simulator.c  e2ee_protocol_simulator.h  echo_server.hpp  mock_client.c  mock_client.h  mock_client_transport.c  mock_client_transport.h  mock_db.c  mock_db.h  mock_server.c  mock_server.h  mock_server_sending.c  mock_server_sending.h  rr_type.h  test_account.c  test_account_db.c  test_aes.c  test_crypto.c  test_db.c  test_db.h  test_env.c  test_env.h  test_file_gcm.c  test_gcm.c  test_group_pre_key.c  test_group_session.c  test_new_device.c  test_opk_db.c  test_pending.c  test_plugin.c  test_plugin.h  test_ratchet.c  test_server.c  test_server.h  test_session.c  (+8 more)
tests/cert/: central_certificate.txt  central_private.txt  test_certificate.txt  test_private.txt
tests/data/: 0  1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  (+1960 more)
tests/lib/: CMakeLists.txt
tests/lib/websocketpp/websocketpp/: Makefile  cmake_install.cmake
(+1219 files in other folders)
